<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:textColor="#000000"
        android:text="@string/name" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name1"
        android:layout_alignStart="@+id/name1"
        android:layout_below="@+id/name1"
        android:ems="10"
        android:hint="@string/first"
        android:inputType="textPersonName"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignBaseline="@+id/firstname"
        android:layout_alignBottom="@+id/firstname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstname"
        android:layout_alignStart="@+id/firstname"
        android:layout_below="@+id/firstname"
        android:layout_marginTop="3dp"
        android:textColor="#000000"
        android:text="@string/email_address" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lastname"
        android:layout_alignLeft="@+id/mail"
        android:layout_alignRight="@+id/lastname"
        android:layout_alignStart="@+id/mail"
        android:layout_below="@+id/mail"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="2dp"
        android:textColor="#000000"
        android:text="@string/password"
        />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="15sp"
        android:layout_below="@+id/pass"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_below="@+id/newpassword"
        android:layout_alignLeft="@+id/newpassword"
        android:layout_alignStart="@+id/newpassword"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:textSize="15sp"
        android:layout_below="@+id/dob"
        android:layout_alignLeft="@+id/dob"
        android:layout_alignStart="@+id/dob" />

    <TextView
        android:id="@+id/gender1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/birth_date"
        android:layout_alignStart="@+id/birth_date"
        android:layout_below="@+id/birth_date"
        android:layout_marginTop="2dp"
        android:textColor="#000000"
        android:text="@string/gender" />

    <RadioGroup
        android:id="@+id/group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/gender1"
        android:layout_alignStart="@+id/gender1"
        android:layout_below="@+id/gender1">

    <RadioButton
        android:id="@+id/maleradiobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/femaleradiobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/female" /></RadioGroup>

    <TextView
        android:id="@+id/locationtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/group_gender"
        android:layout_alignStart="@+id/group_gender"
        android:layout_below="@+id/group_gender"
        android:layout_marginTop="2dp"
        android:textColor="#000000"
        android:text="@string/location" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textSize="15sp"
        android:layout_below="@+id/locationtxt"
        android:layout_alignLeft="@+id/locationtxt"
        android:layout_alignStart="@+id/locationtxt" />

    <TextView
        android:id="@+id/mobiletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_alignStart="@+id/location"
        android:layout_below="@+id/location"
        android:layout_marginTop="2dp"
        android:textColor="#000000"
        android:text="@string/mobile" />

    <EditText
        android:id="@+id/mobilenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textSize="15sp"
        android:layout_below="@+id/mobiletxt"
        android:layout_alignLeft="@+id/mobiletxt"
        android:layout_alignStart="@+id/mobiletxt" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/continue1"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/gender1"
        android:layout_toEndOf="@+id/gender1" />

    <CheckBox
        android:id="@+id/agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobilenumber"
        android:layout_alignStart="@+id/mobilenumber"
        android:layout_below="@+id/mobilenumber"
        android:layout_marginTop="10dp"
        android:text="@string/agreement" />

</RelativeLayout>