<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageview_product"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/productimage" />

        <TextView
            android:id="@+id/nameofproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/productname"
            android:textSize="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/brandname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/brandname"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/salesprice" />

        <TextView
            android:id="@+id/msrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/msrp" />

        <RatingBar
            android:id="@+id/ratingbar"
            style="@android:style/Widget.Holo.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_210sdp"
            android:max="5"
            android:numStars="0" />

    </LinearLayout>

</android.support.v7.widget.CardView>