<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.one.shopone.result_activity">

    <RelativeLayout
        android:id="@+id/m_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F2F2F2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/result_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/all_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/result_recycler"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_menu_allfriends" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_menu_notifications" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_menu_friendslist" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_menu_notifications" />


        </LinearLayout>

        <TextView
            android:id="@+id/walmart_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/all_btn"
            android:layout_alignStart="@+id/all_btn"
            android:layout_below="@+id/all_btn"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/walmart" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/walmart_recycler"
            android:layout_below="@+id/walmart_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/ebay_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ebay"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_below="@+id/walmart_recycler"
            android:layout_alignLeft="@+id/walmart_txt"
            android:layout_alignStart="@+id/walmart_txt" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ebay_recycler"
            android:layout_below="@+id/ebay_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
